# prolog-reasoner

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPECIFICATION.md  pyproject.toml  server.json
.github/workflows/: test.yml
benchmarks/: problems.json  run_benchmark.py
docker/: Dockerfile  docker-compose.yml
examples/: constraint.py  family.py  socrates.py
src/prolog_reasoner/: __init__.py  config.py  errors.py  executor.py  llm_client.py  logger.py  models.py  reasoner.py  rule_base.py  server.py  translator.py
tests/: conftest.py
tests/fixtures/llm_responses/: constraint.json  family.json  socrates.json
tests/fixtures/prolog/: constraint.pl  family.pl  socrates.pl
tests/integration/: test_mcp_server.py  test_reasoner.py
tests/unit/: test_config.py  test_executor.py  test_llm_client.py  test_logger.py  test_models.py  test_rule_base.py  test_translator.py
